--- a/app/views/register.html
+++ b/app/views/register.html
@@ -7,11 +7,29 @@
 
   </head>
   <body>
+          <!-- main-header -->
+          <header class="main-header">
+            <!-- logo -->
+            <div class="logo">
+              <a href="/">
+                <img src="/images/logo.png" alt="Logo SLC" class="elLogo">
+              </a>
+            </div>
+            <!-- Left-navbar -->
+            <nav class="left-navbar">
+             <p> Componentes Electrónicos</p>
+            </nav>
+            <!-- right-navbar -->
+            <nav class="right-navbar">
+              <ul>
+                  <li><a href="/">Inicio</a></li>
+                  <li><a href="/register" target="blank">Ingresá</a></li>
+                  <li><a href="/register" target="blank">Registrate</a></li>
+                  <li><a href="/productCart" target="blank"> <img src="/images/carrito16px.png"></a></li>
+              </ul>
+            </nav>
+          </header>
     <header class="container-header">
-    <div class = "logo">
-      <img src="/images/logo.png"/>
-      <a>Componentes electronicos</a>
-    </div>
     <div class="bloque">
       <h2>Registrate</h2>
       <input type="text" name="email" size="40" placeholder="Correo Electronico">
