productCart.html is responsive now

--- a/app/public/stylesheets/productCart.css
+++ b/app/public/stylesheets/productCart.css
@@ -163,7 +163,7 @@
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 16%;
   border-radius: 5%;
   height: 8%;
   
