--- a/app/views/productCart.html
+++ b/app/views/productCart.html
@@ -44,8 +44,8 @@
           <div class="tituloYCantPrecio">
               <div class="tituloProducto">Raspberry Pi 3 Plus con descripcion super larga aaaa</div>
               <div class="precioCant">
-                  <input class="form-control col-sm-2" type="number" value="2" min="1" max="999">
-                  <div>$1532.56</div> </div>
+                  <input class="form-control col-xl-2 col-sm-12 col-12" type="number" value="2" min="1" max="999">
+                  <div class="col-xl-2  col-12">$1532.56</div> </div>
           </div>
         </div>
         
@@ -56,21 +56,28 @@
             <div class="tituloYCantPrecio">
                 <div class="tituloProducto">Puente Rectificador 1.5A con descripción super larga</div>
                 <div class="precioCant">
-                  <input type=number class="form-control col-md-2" value=42 min=0 max=99>
+                  <input class="form-control col-xl-2 col-sm-12 col-12" type="number" value="2" min="1" max="999">
                     
-                    <div>$232.26</div> </div>
+                    <div class="col-xl-2  col-12">$232.26</div> </div>
             </div>
           </div>
    
-        <div class="resumen">
-            <span class="seguiComprando"> <a href="/"> seguir comprando </a></span>
-            
+        <div class="container">
+          <div class="row">
+              <div class="col-xl-4 col-lg-3 col-md-5 col-sm-6 col-12">
+              <span class="seguiComprando"> <a href="/"> seguir comprando </a></span>
+              </div>
+              <div class="col-xl-1 col-lg-3 col-md-5 col-sm-6 col-6">
               <span class="resaltarTexto"> TOTAL   </span>
+              </div>
+              <div class="col-xl-2 col-lg-3 col-md-5 col-sm-6 col-12">
               <span class="superResaltarTexto"> $1764.82</span>
-              <div class="buttonComprar">Continuar Compra</div>
-              <!-- <span class="botonComprar"> <button type="submit" class="btn btn-primary">Comprar</button> </span> -->
-            </div>
-            
+              </div>
+              <div class="col-xl-2 col-lg-3 col-md-5 col-sm-6 col-6">
+              <button type="submit" class="btn btn-primary">Comprar</button> 
+              </div>
+          </div>
+        </div>
           </div>
   </body>
   <script src="/js/jquery-3.4.1.min.js"></script>
