--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,6 +3,7 @@
   <head>
     <title> SLC Componentes Electrónicos </title>
     <link rel='stylesheet' href='/stylesheets/styleIndex.css' />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <meta name= "viewport" content="width= device-width">
   </head>
 
@@ -44,35 +45,39 @@
 <h1 class="destacados"> Destacados</h1>
 
 <!-- main-content -->
-<section class="container-productos">
-    <article class="detail-category1Color"> 
+<section class="container">
+
+<div class="row">
+
+  <div class="col-xl-4 col-lg-6 col-md-5 col-sm-6 col-12">
+    <div class="cont">
     <h6>ARDUINO</h6>
-    <a href="#" class="call-to-action">Ver Categoría</a>
-			</article>
-
-
-  <article class="detail-category1"> 
+    <a href="#" class="call-to-action"><img src="/images/Arduino.JPG"> </a>
+  </div>
+ 
+    </div>
+<div class="col-xl-4  col-lg-6 col-md-5 col-sm-6 col-12"> 
+  <div class="cont">
     <h6>RASPBERRRY</h6>    
-        <a href="#" class="call-to-action">Ver Categoría</a>
-        <img src="/images/Raspberri_Home.jpg">
-    </article>
+        <a href="#" class="call-to-action"><img src="/images/raspberrycat.jpg"></a>
+  </div>
 
+     </div>
 
-  <article class="detail-category2"> 
+     <div class="col-xl-4  col-lg-6 col-md-5 col-sm-6 col-12">
+      <div class="cont">
   <h6>PLCs</h6>
-  <a href="#" class="call-to-action">Ver Categoría</a>
-  <img src="/images/PLC_Home.jpg">
-    </article>
-
-  </section>
-
-<section class="container-productos2">
-  <article class="detail-category3"> 
+  <a href="#" class="call-to-action"><img src="/images/PLC_Home.jpg"></a>
+      </div>
+     </div>
+     <div class="col-xl-12  col-lg-4 col-md-5 col-sm-6 col-12">
+      <div class="cont">
   <h6>COMBOS Y OFERTAS </h6>
-  <a href="#" class="call-to-action">Ver Categoría</a>
-  <img src="/images/Combos_home.png" alt="Combos y Ofertas">
-    </article>
+  <a href="#" class="call-to-action"><img src="/images/Combos.jpg" alt="Combos y Ofertas"> </a>
+      </div>
 
+     </div>
+  </div>
 </section>
 
 <!-- pie -->
