--- a/app/public/stylesheets/productCart.css
+++ b/app/public/stylesheets/productCart.css
@@ -194,3 +194,21 @@
   text-align: center;
 }
 
+.footer-navbar {
+  width: 100%;
+  font-size: 10px;
+  
+  text-transform: capitalize;
+  clear: both;
+  }
+
+.footer-navbar li {
+  display: inline-block;
+  order: 100;
+  vertical-align: middle;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+.footer-navbar a {
+  color:#597ff9;
+}
