--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -44,15 +44,7 @@
 </section>
 
 <!-- pie -->
-<footer>
-<nav class="footer-navbar">
-  <ul>
-      <li><a href="/legal" target="blank">Terminos y Condiciones</a></li>
-      <li><a href="/legal" target="blank">Política de Privacidad</a></li>
-      <li><a href="#" target="blank">Ayuda</a></li>
-  </ul>
-</nav>
-</footer>
+<%- include('../partials/footer'); %>
 
   </body>
 </html>
