--- a/app/views/productCart.ejs
+++ b/app/views/productCart.ejs
@@ -57,6 +57,7 @@
           </div>
         </div>
           </div>
+          <%- include('../partials/footer'); %>
   </body>
   <script src="/js/jquery-3.4.1.min.js"></script>
   <script src="/js/bootstrap-input-spinner.js"></script>
