--- a/app/views/productDetail.ejs
+++ b/app/views/productDetail.ejs
@@ -78,15 +78,7 @@
 </div>
 
 <!-- pie -->
-<footer>
-    <nav class="footer-navbar">
-      <ul>
-          <li><a href="/legal" target="blank">Terminos y Condiciones</a></li>
-          <li><a href="/legal" target="blank">Política de Privacidad</a></li>
-          <li><a href="#" target="blank">Ayuda</a></li>
-      </ul>
-    </nav>
-    </footer>
+<%- include('../partials/footer'); %>
     
 
 <!---bootstrap-->
