--- a/app/public/stylesheets/register.css
+++ b/app/public/stylesheets/register.css
@@ -138,3 +138,45 @@ p {
     justify-content: center;
 
 }
+
+.wrap{
+  width: 100%;
+  height: 35px;
+}
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 90%;
+  border: 1px solid #597ff9;
+  border-right: none;
+  padding: 5px;
+  height: auto;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9DBFAF;
+  text-align: center;
+}
+
+.footer-navbar {
+  width: 100%;
+  font-size: 10px;
+  
+  text-transform: capitalize;
+  clear: both;
+  }
+
+.footer-navbar li {
+  display: inline-block;
+  order: 100;
+  vertical-align: middle;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+.footer-navbar a {
+  color:#597ff9;
+}
