Creo CSS para header-footer

--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Formulario de Registro</title>
+    <%- include('../partials/head', {title: 'Formulario de Registro'}); %> 
     <link rel='stylesheet' href='/stylesheets/register.css' />
-    <meta name="viewport" content="width = device-width">
+    
 
   </head>
+
   <body>
     <%- include('../partials/nav'); %> 
     <header class="container-header">
