--- a/app/views/registerforma.ejs
+++ b/app/views/registerforma.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> SLC Componentes Electrónicos </title>
+    <%- include('../partials/head', {title: 'SLC Detalle de Producto'}); %>
     <link rel='stylesheet' href='/stylesheets/registerforma.css'/>
-    <meta name= "viewport" content="width= device-width">
-    <meta charset="utf-8">
   </head>
   <body>
     <%- include('../partials/nav'); %> 
