--- a/app/partials/head.ejs
+++ b/app/partials/head.ejs
@@ -1,3 +1,5 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="stylesheets/headerYfooter.css" rel="stylesheet">
+    <meta charset="utf-8">
     <meta name= "viewport" content="width= device-width">
     <title> <%= title %> </title>
