--- a/app/views/productCart.ejs
+++ b/app/views/productCart.ejs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shoppingcart</title>
+    <%- include('../partials/head', {title: 'SLC Shoppingcart'}); %>
+    
     <link rel='stylesheet' href='/stylesheets/productCart.css' />
     <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
-    <meta name= 'viewport' content="width= device-width">
+   
   </head>
   
   <body>
