Separo header de SearchBar

--- a/app/views/productCart.ejs
+++ b/app/views/productCart.ejs
@@ -10,7 +10,7 @@
   
   <body>
     <%- include('../partials/nav'); %> 
-    
+    <%- include('../partials/searchBar'); %>
       <div class="titulo">
         Carrito de Compras
       </div>
