--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -9,6 +9,7 @@
 
   <body>
     <%- include('../partials/nav'); %> 
+    <%- include('../partials/searchBar'); %>
     <header class="container-header">
     <div class="bloque">
       <h2>Registrate</h2>
