--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,6 +7,7 @@
   
   <body>
     <%- include('../partials/nav'); %> 
+    <%- include('../partials/searchBar'); %>
 <!-- main-content -->
 <section class="container">
 
