--- a/app/views/productDetail.ejs
+++ b/app/views/productDetail.ejs
@@ -9,6 +9,7 @@
 
   <body>
     <%- include('../partials/nav'); %> 
+    <%- include('../partials/searchBar'); %>
  <!---breadrcum-->
 
  <ul class="breadcrum"> 
