--- a/app/partials/head.ejs
+++ b/app/partials/head.ejs
@@ -2,4 +2,4 @@
     <link href="stylesheets/headerYfooter.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name= "viewport" content="width= device-width">
-    <title> <%= title %> </title>
+    <title> <%= title2 %> </title>
