--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include('../partials/head', {title: 'SLC Componentes Electrónicos'}); %> 
+    <%- include('../partials/head'); %> 
     <link rel='stylesheet' href='/stylesheets/styleIndex.css' />
   </head>
   
