--- a/app/views/productAdd2.ejs
+++ b/app/views/productAdd2.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <%- include('../partials/head', {title: 'Product Add Step 2 of 2'}); %>
+      <%- include('../partials/head'); %>
         <link rel='stylesheet' href='/stylesheets/styleProductAdd.css' />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         
