--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include('../partials/head', {title: 'Formulario de Registro'}); %> 
+    <%- include('../partials/head'); %> 
     <link rel='stylesheet' href='/stylesheets/register.css' />
     
 
