--- a/app/views/registerforma.ejs
+++ b/app/views/registerforma.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include('../partials/head', {title: 'SLC Detalle de Producto'}); %>
+    <%- include('../partials/head'); %>
     <link rel='stylesheet' href='/stylesheets/registerforma.css'/>
   </head>
   <body>
