--- a/app/views/registerformb.ejs
+++ b/app/views/registerformb.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include('../partials/head', {title: 'SLC Registración'}); %>
+    <%- include('../partials/head'); %>
     <title> SLC Componentes Electrónicos </title>
     <link rel='stylesheet' href='/stylesheets/registerformb.css' />
    
