--- a/app/views/productAdd.ejs
+++ b/app/views/productAdd.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <%- include('../partials/head', {title: 'Product Add Step 1 of 2'}); %>
+      <%- include('../partials/head'); %>
         <link rel='stylesheet' href='/stylesheets/styleProductAdd.css' />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
