--- a/app/views/productCart.ejs
+++ b/app/views/productCart.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include('../partials/head', {title: 'SLC Shoppingcart'}); %>
+    <%- include('../partials/head'); %>
     
     <link rel='stylesheet' href='/stylesheets/productCart.css' />
     <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
