--- a/app/views/productDetail.ejs
+++ b/app/views/productDetail.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include('../partials/head', {title: 'SLC Detalle de Producto'}); %>
+    <%- include('../partials/head'); %>
     <link rel='stylesheet' href='/stylesheets/styleProductDetail.css' />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
