El header es casi responsive

--- a/app/partials/nav.ejs
+++ b/app/partials/nav.ejs
@@ -1,17 +1,21 @@
-<div class="container-header">
+<div class="container">
     <!-- main-header -->
-    <header class="main-header">
+    <header class="row">
       <!-- logo -->
-      <div class="logo">
+      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-12">
         <a href="/">
           <img src="/images/logo.png" alt="Logo SLC">
         </a>
       </div>
       <!-- Left-navbar -->
+      <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 col-12">
       <nav class="left-navbar">
        <p> Componentes Electrónicos</p>
+       
       </nav>
+    </div>
       <!-- right-navbar -->
+      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-12" >
       <nav class="right-navbar">
         <ul>
             <li><a href="/">Inicio</a></li>
@@ -20,6 +24,7 @@
             <li><a href="/productCart" target="blank"> <img src="/images/carrito16px.png"></a></li>
         </ul>
       </nav>
+    </div>
     </header>
 
 
