--- a/app/views/productDetail.ejs
+++ b/app/views/productDetail.ejs
@@ -22,8 +22,9 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-9"> <p class="tituloProducto"> Raspberry Pi 3 B+ Plus Kit 64gb A1 Fuente Gab Disipa E14 Rs</p></div>
-    <div class="col-3"> 
+     
+    <div class="col-12 col-sm-6 col-lg-8"> <p class="tituloProducto"> Raspberry Pi 3 B+ Plus Kit 64gb A1 Fuente Gab Disipa E14 Rs</p></div>
+    <div class="col-6 col-lg-4"> 
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
@@ -37,8 +38,8 @@
 
 <div class="container">
     <div class="row">
-      <div class="col-6"> <img src="/images/Raspberri_Home.jpg"> </div>
-      <div class="col-6"> 
+      <div class="col-6 col-lg-4"> <img src="/images/Raspberri_Home.jpg"> </div>
+      <div class="col-12 col-sm-6 col-lg-8"> 
        <p class="tituloDetalle">ESPECIFICACIONES</p> 
        <ul class="caracteristicasProductos">
        <li>Marca: Raspberry </li>   
@@ -61,20 +62,36 @@
 
 <!-- detalle para comprar -->
 <div class="pieDetalle">
- <P class="precio"> $1532,56 </P>  
 
- <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">Elegir Cantidad
+  <!-- precio -->
+  <div class="col-xs-6 col-md-3">
+   <P class="precio"> $1532,56 </P>  
+  </div>
+
+<!-- cantidad -->
+<div class="col-xs-6 col-md-3">
+  <div class="dropdown">
+     <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">
+      Elegir Cantidad
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
       <li>1</li>
       <li>2</li>
       <li>3</li>
     </ul>
-  </div>
- 
- <div class="buttonComprar"> Comprar </div>
- <div class="buttonCarrito"> Agregar al Carrito </div>   
+     </div>
+    </div>
+
+ <!-- comprar -->
+ <div class="col-xs-6 col-md-3">
+ <div class="buttonComprar">  Comprar  </div>
+</div>
+
+ <!-- agregar al carrito -->
+ <div class="col-xs-6 col-md-3">
+ <div class="buttonCarrito"> Agregar al Carrito </div> 
+</div>
+
 </div>
 
 <!-- pie -->
