--- a/app/public/stylesheets/register.css
+++ b/app/public/stylesheets/register.css
@@ -104,14 +104,13 @@ header {
     border-radius: 30%;
     background-color: white;
     border: none;
-    padding: 5px 50px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 2vh;
     border-radius: 5%;
     margin-left: 33%;
-    margin-top: 10px;
+    
 }
 
 a {
