--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -16,8 +16,10 @@
     </div>
     </div>
     <div class="col-12">
-      <input type="text" name="email" size="40" placeholder="Correo Electronico">
-      <input type="password" name="password" size="40" placeholder="Contraseña">
+      <div class = "elImput">
+      <input class="unInput" type="text" name="email" size="40" placeholder="Correo Electronico">
+      <input class="unInput" type="password" name="password" size="40" placeholder="Contraseña">
+    </div>
     </div>
     <div class="col-12">
         <a class="crearCta" href="/index" type="submit" value="Ingresá">
