Subo base de comunicacion HTTP

--- a/app/public/stylesheets/styleIndex.css
+++ b/app/public/stylesheets/styleIndex.css
@@ -154,3 +154,10 @@ text-decoration: underline;
   order: 100;
 }
 
+/* img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 
+} 
+*/
+
