Fix texto usuarios

--- a/app/views/users.ejs
+++ b/app/views/users.ejs
@@ -15,7 +15,7 @@
 <div class="container products-wrapper">
     <div class="row">
         <div class="col-12">
-            <h2 class="products-title">Todos los productos</h2>
+            <h2 class="products-title">Todos los Usuarios</h2>
         </div>
     
         <div class="col-12 col-sm-6 col-lg-3">
