fix menor en EditUser

--- a/app/views/editUser.ejs
+++ b/app/views/editUser.ejs
@@ -22,7 +22,7 @@
                 <form action="/products/<%= user.userId %>/edit?_method=PUT" enctype="multipart/form-data" method="POST" >
                     <div>
                         <label>Nombre de Usuario:</label>
-                        <!-- value="<%= elProd.prodName %>" -->
+                      
                         <input type="text" name="nombre" value="<%= user.nombre %>" >
                     </div>
                     <div>
@@ -35,7 +35,7 @@
                     </div>
                   <!--   <div>
                         <label>Descuento:</label>
-                        <input type="text" name="discount" value="<%= elProd.discount %>">
+                        <input type="text" name="discount" value="">
                     </div> -->
                     <div>
                         <label>Imagen Actual:</label>
