--- a/app/views/editUser.ejs
+++ b/app/views/editUser.ejs
@@ -19,7 +19,7 @@
         <div class="col-12 col-sm-6 col-lg-3">
            
             <section class="product-box">
-                <form action="/products/<%= user.userId %>/edit?_method=PUT" enctype="multipart/form-data" method="POST" >
+                <form action="/users/<%= user.userId %>?_method=PUT" enctype="multipart/form-data" method="POST" >
                     <div>
                         <label>Nombre de Usuario:</label>
                       
@@ -39,7 +39,7 @@
                     </div> -->
                     <div>
                         <label>Imagen Actual:</label>
-                        <img src="/images/products/<%= user.image %>">
+                        <img src="/images/users/<%= user.image %>">
                     </div>
                     <div>
                         <label>Avatar del usuario:</label>
@@ -48,7 +48,7 @@
                     <button type="submit">Guardar Usuario</button>
                 </form>
 
-                <form  action="/products/<%= user.userId %>?_method=DELETE" method="POST" >
+                <form  action="/users/<%= user.userId %>?_method=DELETE" method="POST" >
                     <button type="submit">Borrar Usuario</button>
                 
                 </form>
